[gd_scene load_steps=6 format=3 uid="uid://8cfghp6qx4pk"]

[ext_resource type="Script" path="res://terror_functions.gd" id="1_cjvbw"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_bsl26"]
[ext_resource type="Texture2D" uid="uid://c30ygrxk1gk28" path="res://sprites/bedroom items/Front/ball_front.png" id="3_7sakn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7h76"]
size = Vector2(8, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dd2ri"]
shader = ExtResource("2_bsl26")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="ball_front" type="Area2D"]
script = ExtResource("1_cjvbw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_m7h76")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_dd2ri")
texture = ExtResource("3_7sakn")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
