[gd_scene load_steps=6 format=3 uid="uid://bmiyep66aevm"]

[ext_resource type="Script" path="res://terror_functions.gd" id="1_e1e55"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_v7q7p"]
[ext_resource type="Texture2D" uid="uid://1clkm2whvekg" path="res://sprites/bedroom items/Front/book_front #1.png" id="3_mhxn2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7h76"]
size = Vector2(4, 11)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dd2ri"]
shader = ExtResource("2_v7q7p")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="book_front #1" type="Area2D"]
script = ExtResource("1_e1e55")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_m7h76")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_dd2ri")
texture = ExtResource("3_mhxn2")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
