[gd_scene load_steps=6 format=3 uid="uid://cxvtdpvt7humr"]

[ext_resource type="Script" path="res://terror_functions.gd" id="1_rdl4h"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_r1nsw"]
[ext_resource type="Texture2D" uid="uid://b814w3obbksx8" path="res://sprites/bedroom items/Front/bottle_front #1.png" id="3_f4hb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgj77"]
size = Vector2(6.5, 10.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xmc7j"]
shader = ExtResource("2_r1nsw")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="bottle_front #1" type="Area2D"]
script = ExtResource("1_rdl4h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, 0.75)
shape = SubResource("RectangleShape2D_vgj77")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_xmc7j")
texture = ExtResource("3_f4hb7")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
