[gd_scene load_steps=6 format=3 uid="uid://nokavc3wa5wr"]

[ext_resource type="Script" path="res://terror_functions.gd" id="1_727bo"]
[ext_resource type="Shader" path="res://world.gdshader" id="1_a6u8m"]
[ext_resource type="Texture2D" uid="uid://jy3cicg43w26" path="res://sprites/bedroom items/Front/painting_front #3.png" id="2_dmgqg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5pcj"]
size = Vector2(7, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5nnc"]
shader = ExtResource("1_a6u8m")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="painting_front #3" type="Area2D"]
script = ExtResource("1_727bo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_p5pcj")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_x5nnc")
texture = ExtResource("2_dmgqg")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
