[gd_scene load_steps=6 format=3 uid="uid://ye7rhd1u6aro"]

[ext_resource type="Script" path="res://terror_functions.gd" id="1_a081g"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_qrs58"]
[ext_resource type="Texture2D" uid="uid://d0yh1o44mj0i5" path="res://sprites/bedroom items/Front/plant_front #2.png" id="3_ghiik"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anwy6"]
size = Vector2(7, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_43427"]
shader = ExtResource("2_qrs58")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="plant_front #2" type="Area2D"]
script = ExtResource("1_a081g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_anwy6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_43427")
texture = ExtResource("3_ghiik")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
